human-intervention-logs/io.sundr:sundr-model-repo:0.230.1/gradle-test/gradle-test-2026-06-06T12-31-28-851860Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.sundr:sundr-model-repo:0.230.1
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7792-f88a6fa8/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 2 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :checkTestTimeoutAnnotations

/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7792-f88a6fa8/tests/src/io.sundr/sundr-model-repo/0.230.1/src/test/java/io_sundr/sundr_model_repo/Sundr_model_repoTest.java:178: error: cannot find symbol
        Method helper = new MethodBuilder(Method.newMethod("helper", STRING))
                            ^
  symbol:   class MethodBuilder
  location: class Sundr_model_repoTest
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7792-f88a6fa8/tests/src/io.sundr/sundr-model-repo/0.230.1/src/test/java/io_sundr/sundr_model_repo/Sundr_model_repoTest.java:181: error: cannot find symbol
        Method load = new MethodBuilder(Method.newMethod("load", STRING))
                          ^
  symbol:   class MethodBuilder
  location: class Sundr_model_repoTest
Note: /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7792-f88a6fa8/tests/src/io.sundr/sundr-model-repo/0.230.1/src/test/java/io_sundr/sundr_model_repo/Sundr_model_repoTest.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
> Task :compileTestJava FAILED


[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7792-f88a6fa8/tests/src/io.sundr/sundr-model-repo/0.230.1/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7792-f88a6fa8/tests/src/io.sundr/sundr-model-repo/0.230.1/src/test/java/io_sundr/sundr_model_repo/Sundr_model_repoTest.java uses unchecked or unsafe operations.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7792-f88a6fa8/tests/src/io.sundr/sundr-model-repo/0.230.1/src/test/java/io_sundr/sundr_model_repo/Sundr_model_repoTest.java:178: error: cannot find symbol
          Method helper = new MethodBuilder(Method.newMethod("helper", STRING))
                              ^
    symbol:   class MethodBuilder
    location: class Sundr_model_repoTest
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7792-f88a6fa8/tests/src/io.sundr/sundr-model-repo/0.230.1/src/test/java/io_sundr/sundr_model_repo/Sundr_model_repoTest.java:181: error: cannot find symbol
          Method load = new MethodBuilder(Method.newMethod("load", STRING))
                            ^
    symbol:   class MethodBuilder
    location: class Sundr_model_repoTest
  Note: Recompile with -Xlint:unchecked for details.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
13 actionable tasks: 2 executed, 11 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7792-f88a6fa8/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.sundr:sundr-model-repo:0.230.1 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
